fix: text wrapping during expand animation

--- a/packages/theme/src/sidebar.scss
+++ b/packages/theme/src/sidebar.scss
@@ -1,5 +1,5 @@
 .puik-sidebar {
-  @apply text-sm font-normal relative z-10 w-[20.5rem] sm:w-[13.125rem] h-full bg-white border-r border-primary-300;
+  @apply text-sm font-normal relative z-10 w-[20.5rem] sm:w-[13.125rem] h-full bg-white border-r border-primary-300 overflow-hidden;
   transition: width 0.2s ease-out;
 
   &__header {
@@ -21,18 +21,18 @@
   }
 
   &__content {
-    @apply px-2 pt-4;
+    @apply px-2 pt-4 w-[20.5rem] sm:w-[13.125rem];
   }
 
   &--collapsed {
-    @apply w-[3.312rem];
+    @apply w-[3.312rem] overflow-visible;
 
     .puik-sidebar__header__button {
       @apply w-full;
     }
 
     .puik-sidebar__content {
-      @apply px-0;
+      @apply px-0 w-[3.312rem];
     }
 
     .puik-sidebar-item__button {
